Store unordered API model elements in (immutable) sets. Ignore location in equality checks.